--- a/.github/workflows/Github-Actions-Build.yml
+++ b/.github/workflows/Github-Actions-Build.yml
@@ -33,3 +33,19 @@ jobs:
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+  
+    - name: Build and Push Docker Image
+      run: docker build -t senthilnata1/Github-actions-Docker-java:0.0.1.Release .
+
+    - name: Login to Docker Hub
+      run: docker login -u senthilnata1 -p RisTha15#d1
+
+    - name: Push Docker Image
+      run: docker push enthilnata1/Github-actions-Docker-java:0.0.1.Release
+
+    - name: Deploy to Prod Environment
+      run: docker run -p 5000:5000 Github-actions-Docker-java:0.0.1.Release
+
+    
+      
+ 
