--- a/.github/workflows/Github-Actions-Build.yml
+++ b/.github/workflows/Github-Actions-Build.yml
@@ -34,7 +34,7 @@ jobs:
    # - name: Update dependency graph
    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
   
-    - name: Build and Push Docker Image
+    - name: Build Docker Image
       run: docker build -t senthilnata1/github-actions-docker-java-app:0.0.2.Release .
 
     - name: Login to Docker Hub
@@ -43,14 +43,11 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         
-#    - name: Login to Docker Hub
-#      run: docker login -u senthilnata1 -p RisTha15#d1
-
     - name: Push Docker Image
       run: docker push senthilnata1/github-actions-docker-java-app:0.0.2.Release
 
-#    - name: Pull Docker Image
-#      run: docker pull senthilnata1/github-actions-docker-java-app:0.0.2.Release
+    - name: Pull Docker Image
+      run: docker pull senthilnata1/github-actions-docker-java-app:0.0.2.Release
       
     - name: Deploy to Prod Environment
       run: docker run -p 5000:5000 github-actions-docker-java-app:0.0.2.Release
