--- a/.github/workflows/Github-Actions-Build-Image-Deploy.yml
+++ b/.github/workflows/Github-Actions-Build-Image-Deploy.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
@@ -30,10 +30,6 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-   # - name: Update dependency graph
-   #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-  
     - name: Build Docker Image
       run: docker build -t senthilnata1/github-actions-docker-java-app:0.0.2.Release .
 
@@ -45,9 +41,6 @@ jobs:
         
     - name: Push Docker Image
       run: docker push senthilnata1/github-actions-docker-java-app:0.0.2.Release
-
-#    - name: Pull Docker Image
-#      run: docker pull senthilnata1/github-actions-docker-java-app:0.0.2.Release
       
     - name: Deploy to Prod Environment
       run: docker run -p 5000:5000 senthilnata1/github-actions-docker-java-app:0.0.2.Release
