--- a/.github/workflows/Github-Actions-Build-Image-Deploy.yml
+++ b/.github/workflows/Github-Actions-Build-Image-Deploy.yml
@@ -16,17 +16,19 @@ on:
 
 jobs:
   build:
-
-    runs-on: self-hosted
+    runs-on: ubutu-latest
 
     steps:
+    - name: checkout code frm Github repository
     - uses: actions/checkout@v3
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
