--- a/.github/workflows/Github-Actions-Build-Image-Deploy.yml
+++ b/.github/workflows/Github-Actions-Build-Image-Deploy.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubutu-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: checkout code frm Github repository
