--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -27,4 +27,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+
+    - name: Build Docker Image
+      run: docker build -t kriti14/java-app-domo:0.0.1.Release .
+
    
