--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -34,4 +34,7 @@ jobs:
     - name: Build Docker Image
       run: docker build -t kriti14/java-app-domo:0.0.1.Release .
 
+    - name: Push Docker Image
+      run: docker push  kriti14/java-app-domo:0.0.1.Release .
+
    
