--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -33,8 +33,14 @@ jobs:
 
     - name: Build Docker Image
       run: docker build -t kriti14/java-app-domo:0.0.1.Release .
+    - name: Login to Docker Hub
+      uses: docker/login-action@vl
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+      
 
     - name: Push Docker Image
-      run: docker push  kriti14/java-app-domo:0.0.1.Release .
+      run: docker push  kriti14/java-app-domo:0.0.1.Release
 
    
