--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -35,7 +35,7 @@ jobs:
       run: docker build -t kriti14/java-app-domo:0.0.1.Release .
       
     - name: Login to Docker Hub
-      uses: docker/login-action@vl
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
